; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_warnless.c_curlx_sltous.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_warnless.c_curlx_sltous.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURL_MASK_USHORT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i16 @curlx_sltous(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp sge i64 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @DEBUGASSERT(i32 %5)
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @CURL_MASK_USHORT, align 8
  %9 = icmp ule i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @DEBUGASSERT(i32 %10)
  %12 = load i64, i64* %2, align 8
  %13 = load i64, i64* @CURL_MASK_USHORT, align 8
  %14 = and i64 %12, %13
  %15 = trunc i64 %14 to i16
  ret i16 %15
}

declare dso_local i32 @DEBUGASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
